<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp" >

    <TextView
        android:id="@+id/tv_shop_town"
        style="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:layout_marginLeft="8dp"
        android:text="@string/shop_example_text" />

    <TextView
        android:id="@+id/tv_shop_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_shop_town"
        android:layout_below="@+id/tv_shop_town"
        android:layout_marginLeft="8dp"
        android:text="@string/address_example_text" />

    <ImageView
        android:id="@+id/image_right_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/desc_right_arrow"
        android:src="@drawable/row_arrow" />

</RelativeLayout>