<?xml version="1.0" encoding="utf-8"?>
<es.dexusta.ticketcompra.view.SlideLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_category"
                style="@style/DefaultLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/lbl_category"/>

            <View
                android:id="@+id/div_category"
                style="@style/DefaultDiv"
                android:layout_below="@+id/lbl_category"/>

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/div_category"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:text="Category"/>

            <TextView
                android:id="@+id/lbl_subcategory"
                style="@style/DefaultLabel"
                android:layout_below="@+id/tv_category"
                android:layout_marginTop="16dp"
                android:text="@string/lbl_subcategory"/>

            <View
                android:id="@+id/div_subcategory"
                style="@style/DefaultDiv"
                android:layout_below="@+id/lbl_subcategory"/>

            <TextView
                android:id="@+id/tv_subcategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/div_subcategory"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:text="Subcategory"/>

            <TextView
                android:id="@+id/lbl_product"
                style="@style/DefaultLabel"
                android:layout_below="@+id/tv_subcategory"
                android:layout_marginTop="16dp"
                android:text="@string/lbl_product"/>

            <View
                android:id="@+id/div_product"
                style="@style/DefaultDiv"
                android:layout_below="@+id/lbl_product"/>

            <EditText
                android:id="@+id/edt_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/div_product"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:hint="@string/hint_name"
                android:inputType="text">

                <requestFocus/>
            </EditText>

            <TextView
                android:id="@+id/lbl_description"
                style="@style/DefaultLabel"
                android:layout_below="@+id/edt_product_name"
                android:layout_marginTop="16dp"
                android:text="@string/lbl_description"/>

            <View
                android:id="@+id/div_description"
                style="@style/DefaultDiv"
                android:layout_below="@+id/lbl_description"/>

            <EditText
                android:id="@+id/edt_description"
                style="@style/EditTextMultiline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/div_description"
                android:hint="@string/hint_description"/>
        </RelativeLayout>

    </ScrollView>
</es.dexusta.ticketcompra.view.SlideLinearLayout>